--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -21,12 +21,12 @@
                 <td th:text="${employee.id}"></td>
                 <td th:text="${employee.authentication.code}"></td>
                 <td th:text="${employee.name}"></td>
-                <td><a th:href="@{/employee/detail/{id}/(id=${employee.id})}">詳細を見る</a></td>
+                <td><a th:href="@{/detail/{id}/(id=${employee.id})}">詳細を見る</a></td>
             </tr>
         </table>
     </form>
 
     <script th:src="@{/js/user/list.js}"></script>
-    <a th:href="@{/employee/register}">新規従業員の登録</a>
+    <a th:href="@{/register}">新規従業員の登録</a>
 </body>
 </html>
