--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -8,7 +8,37 @@
 <body>
     <h1>従業員管理システム</h1>
     <h2>新規登録</h2>
+    <form method="post" th:action="@{/employee/update/{id}/(id=${employee.id})}" th:object="${employee}">
+        <input type="hidden" id="id" name="id" th:field="*{id}">
+        <!-- 登録日時・更新日時を取得する -->
+        <input type="hidden" id="createdAt" name="createdAt" th:value="${#calendars.createNow()}">
+        <input type="hidden" id="updatedAt" name="updatedAt" th:value="${#calendars.createNow()}">
 
+        <p>
+        <label for="code">社員番号</label><br>
+        [[${employee.authentication.code}]]
+        <input type="hidden" id="code" name="code" th:field="*{authentication.code}">
+        </p>
+        <p>
+        <label for="name">氏名</label><br>
+        <input type="text" th:field="*{name}">
+        </p>
+        <p>
+        <label for="password">パスワード</label><br>
+        <input type="password" th:field="*{authentication.password}">
+        </p>
+        <p>
+        <label for="role">権限</label><br>
+        <select th:field="*{authentication.role}">
+                    <option value="" th:text="選択してください">
+                    <option th:each="item:${T(com.techacademy.entity.Authentication.Role).values()}" th:value="${item}" th:text="${item}">
+        </select>
+        </p>
+        <br>
+        <br>
+        <input type="submit" value="投稿"><br>
+        <a th:href="@{/employee/}">一覧に戻る</a>
+    </form>
 
 </body>
 </html>
