--- a/src/main/resources/templates/employee/update.html
+++ b/src/main/resources/templates/employee/update.html
@@ -10,31 +10,43 @@
     <h2>id:[[${employee.id}]]の従業員情報　編集ページ</h2>
 
     <form method="post" th:action="@{/employee/update/{id}/(id=${employee.id})}" th:object="${employee}">
+
+        <!-- ID、登録日時、削除フラグを取得してhiddenで送信する -->
         <input type="hidden" id="id" name="id" th:field="*{id}">
-        <!-- 更新日時を取得する -->
-        <input type="hidden" id="updatedAt" name="updatedAt" th:value="${#calendars.createNow()}">
+        <input type="hidden" id="createdAt" name="createdAt" th:value="*{createdAt}">
+        <input type="hidden" id="deleteFlag" name="deleteFlag" th:value="*{deleteFlag}">
+
+        <!-- 更新日時を現在時で取得してhiddenで送信する -->
+        <input type="hidden" id="updatedAt" name="updatedAt" th:value="${#calendars.format(#calendars.createNowForTimeZone('GMT+0900'), 'yyyy-MM-dd HH:mm:ss.0')}">
+
         <p>
         <label for="code">社員番号</label><br>
         [[${employee.authentication.code}]]
         <input type="hidden" id="code" name="code" th:field="*{authentication.code}">
         </p>
+
         <p>
         <label for="name">氏名</label><br>
         <input type="text" th:field="*{name}">
         </p>
+
         <p>
         <label for="password">パスワード</label><br>
-        <input type="password" th:field="*{authentication.password}">
+        <input type="text" th:field="*{authentication.password}">
+        <!-- ↑type="password"にするとフォームが空白になってしまう／暗号化して送信する記述未搭載 -->
         </p>
+
         <p>
         <label for="role">権限</label><br>
         <select th:field="*{authentication.role}">
                     <option th:each="item:${T(com.techacademy.entity.Authentication.Role).values()}" th:value="${item}" th:text="${item}" th:selected="${employee.authentication.role} == ${item}">
         </select>
         </p>
-        <br>
-        <br>
+
+        <br><br>
+
         <input type="submit" value="投稿"><br>
+
         <a th:href="@{'/employee/delete/'+${employee.id}+'/'}">この従業員情報を削除する</a><br>
         <a th:href="@{/employee/}">一覧に戻る</a>
     </form>
