--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -2,12 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>従業員管理システム 従業員一覧（全件）</title>
+<title>日報管理システム 従業員一覧</title>
 <link rel="stylesheet" th:href="@{/css/employee/list.css}">
 </head>
 <body>
-    <h1>従業員管理システム</h1>
-    <h2>従業員一覧(全件)</h2>
+    <h1>日報管理システム</h1>
+    <h2 th:text="'従業員一覧(全' + ${employeelist.size} + '件）'"></h2>
+
+    <form method="post" th:action="@{/logout}">
+    <input type="submit" value="ログアウト">
+    </form><br>
 
     <form name="frm" method="post" th:action="@{/employee/list}">
         <table>
