--- a/src/main/resources/templates/employee/update.html
+++ b/src/main/resources/templates/employee/update.html
@@ -11,18 +11,10 @@
 
     <form method="post" th:action="@{/employee/update/{id}/(id=${employee.id})}" th:object="${employee}">
 
-        <!-- ID、登録日時、削除フラグを取得してhiddenで送信する -->
-        <input type="hidden" id="id" name="id" th:field="*{id}">
-        <input type="hidden" id="createdAt" name="createdAt" th:value="*{createdAt}">
-        <input type="hidden" id="deleteFlag" name="deleteFlag" th:value="*{deleteFlag}">
-
-        <!-- 更新日時を現在時で取得してhiddenで送信する -->
-        <input type="hidden" id="updatedAt" name="updatedAt" th:value="${#calendars.format(#calendars.createNowForTimeZone('GMT+0900'), 'yyyy-MM-dd HH:mm:ss.0')}">
-
         <p>
         <label for="code">社員番号</label><br>
         [[${employee.authentication.code}]]
-        <input type="hidden" id="code" name="code" th:field="*{authentication.code}">
+        <input type="hidden" th:field="*{authentication.code}">
         </p>
 
         <p>
