--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
+<title>日報管理システム</title>
+<link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
 
-<h1>日報管理システム(仮のトップページ)</h1>
+<div class="my-insert-class" th:insert="myfragment :: header"></div>
+
+<section id="main">
+
+各自の日報一覧を表示する予定
+
+</section>
 
 </body>
 </html>
