--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<title>日報管理システム</title>
+<title>日報管理システムへようこそ</title>
 <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -11,7 +11,9 @@
 
 <section id="main">
 
-各自の日報一覧を表示する予定
+<h2>日報管理システムへようこそ</h2>
+
+【自分の日報　一覧】
 
 </section>
 
