--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -35,7 +35,7 @@
             </tr>
         </table>
 
-    <a th:href="@{'/employee/update/'+${employee.id}+'/'}">この従業員情報を更新する</a><br />
+    <a th:href="@{'/employee/update/'+${employee.id}+'/'}">この従業員情報を編集する</a><br />
     <a th:href="@{/employee/}">一覧に戻る</a>
 
 </section>
