--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -10,6 +10,8 @@
 
 <div class="my-insert-class" th:insert="myfragment :: header"></div>
 
+<h2 th:text="'従業員一覧(全' + ${employeelist.size} + '件）'"></h2>
+
 <section id="main">
     <form name="frm" method="post" th:action="@{/employee/list}">
         <table class="employee">
