--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -17,22 +17,26 @@
 
         <p>
         <label for="code">社員番号</label><br>
-        <input type="text" th:field="*{authentication.code}">
+        <input type="text" th:field="*{authentication.code}" th:errorclass="err">
+        <span th:errors="*{authentication.code}" class="err"></span>
         </p>
         <p>
         <label for="name">氏名</label><br>
-        <input type="text" th:field="*{name}">
+        <input type="text" th:field="*{name}" th:errorclass="err">
+        <span th:errors="*{name}" class="err"></span>
         </p>
         <p>
         <label for="password">パスワード</label><br>
-        <input type="password"  th:field="*{authentication.password}">
+        <input type="password"  th:field="*{authentication.password}" th:errorclass="err">
+        <span th:errors="*{authentication.password}" class="err"></span>
         </p>
         <p>
         <label for="role">権限</label><br>
-        <select th:field="*{authentication.role}">
+        <select th:field="*{authentication.role}" th:errorclass="err">
                     <option value="" th:text="選択してください">
                     <option th:each="item:${T(com.techacademy.entity.Authentication.Role).values()}" th:value="${item}" th:text="${item}">
         </select>
+        <span th:errors="*{authentication.role}" class="err"></span>
         </p>
         <input type="hidden" id="deleteFlag" name="deleteFlag" value="0">
         <br>
