--- a/src/main/resources/templates/myfragment.html
+++ b/src/main/resources/templates/myfragment.html
@@ -8,12 +8,12 @@
 
 <div class="my-fragment-class" th:fragment="header">
 
-<h1>日報管理システム</h1>
+<h1><a href="/">日報管理システム</a></h1>
 <header>
 <navi><form method="post" th:action="@{/logout}">
     <ul>
     <li><a href="/employee/">従業員管理</a></li>
-    <li>日報管理（未作成）</li>
+    <li><a href="/report/">日報管理</a></li>
     <li>＜名前＞さん  <input type="submit" value="ログアウト"></li>
     </ul>
     </form>
