--- a/src/main/resources/templates/report/list.html
+++ b/src/main/resources/templates/report/list.html
@@ -22,10 +22,10 @@
                 <th>操作</th>
             </tr>
             <tr th:each="report : ${reportlist}">
-                <td th:text="${report.name}"></td>
-                <td th:text="${report.reportdate}"></td>
+                <td th:text="${report.employee.name}"></td>
+                <td th:text="${report.reportDate}"></td>
                 <td th:text="${report.title}"></td>
-                <td><a th:href="@{/report/detail/{id}/(id=${employee.id})}">詳細を見る</a></td>
+                <td><a th:href="@{/report/detail/{id}/(id=${report.id})}">詳細を見る</a></td>
             </tr>
         </table>
     </form>
