--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="utf-8">
 <title>日報管理システムへようこそ</title>
@@ -13,7 +13,8 @@
 
 <h2>日報管理システムへようこそ</h2>
 
-【自分の日報　一覧】
+【自分の日報一覧】
+
 
 </section>
 
