--- a/src/main/resources/templates/employee/register.html
+++ b/src/main/resources/templates/employee/register.html
@@ -13,7 +13,7 @@
 
 <h2>従業員　新規登録ページ</h2>
 
-    <form method="post" th:action="@{/register/}" th:object="${employee}">
+    <form method="post" th:action="@{/employee/register/}" th:object="${employee}">
 
         <p>
         <label for="code">社員番号</label><br>
