--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,28 @@
 
 【自分の日報一覧】
 
+    <form name="frm" method="post" th:action="@{/}">
+        <table class="report">
+            <tr>
+                <th>氏名</th>
+                <th>日付</th>
+                <th>タイトル</th>
+                <th>操作</th>
+            </tr>
+            <tr th:each="report : ${reportlist}">
+                <td th:text="${report.employee.name}"></td>
+                <td th:text="${report.reportDate}"></td>
+                <td th:text="${report.title}"></td>
+                <td><a th:href="@{/report/detail/{id}/(id=${report.id})}">詳細を見る</a></td>
+            </tr>
+        </table>
+    </form>
+
+    <p th:text="'(全' + ${reportlist.size} + '件）'"></p>
+    <p>
+    <a th:href="@{/report/register}">新規日報の登録</a>
+    </p>
+
 
 </section>
 
