Lesson 35 日報管理システム完成

--- a/src/main/resources/templates/report/list.html
+++ b/src/main/resources/templates/report/list.html
@@ -32,9 +32,7 @@
     </form>
 
     <p th:text="'(全' + ${reportlist.size} + '件）'"></p>
-    <p>
-    <a th:href="@{/report/register}">新規日報の登録</a>
-    </p>
+    <p><a th:href="@{/report/register}">新規日報の登録</a></p>
 
 </section>
 
