--- a/src/main/resources/templates/report/register.html
+++ b/src/main/resources/templates/report/register.html
@@ -42,7 +42,7 @@
         </p>
 </form>
 
-        <p><a th:href="@{/report/}">一覧に戻る</a></p>
+        <p><a th:href="@{/report/list/}">一覧に戻る</a></p>
 
 </section>
 
