--- a/src/main/resources/templates/report/update.html
+++ b/src/main/resources/templates/report/update.html
@@ -44,7 +44,7 @@
 
     </form>
 
-        <p><a th:href="@{/employee/}">一覧に戻る</a></p>
+        <p><a th:href="@{/report/list/}">一覧に戻る</a></p>
 
 </section>
 
