--- a/src/main/resources/templates/report/detail.html
+++ b/src/main/resources/templates/report/detail.html
@@ -46,7 +46,7 @@
     <a th:href="@{'/report/update/'+${report.id}+'/'}">この日報を編集する</a><br />
     </th:block>
 
-    <a th:href="@{/report/}">一覧に戻る</a>
+    <p><a th:href="@{/report/list/}">一覧に戻る</a></p>
 
 </section>
 
